--- a/index.html
+++ b/index.html
@@ -138,16 +138,31 @@
     <div class="static-heart" style="bottom: 20%; right: 10%; transform: rotate(-10deg);">❤</div>
 
     <div class="card">
-        <h1>Hello Beautiful !!</h1>
-        <p style="color: #e16da7">You make my heart smile every single day. <br><b>Will you be my Valentine ?</b></p>
+        <h1 id="titleText">Hello Beautiful !!</h1>
+        <p id="msgText" style="color: #e16da7">You make my heart smile every single day. <br><b>Will you be my Valentine ?</b></p>
         
         <div class="btn-container">
             <button id="yesBtn">Yes! 💖</button>
             <button id="noBtn">No</button>
         </div>
     </div>
+    
+    <img id="gifOverlay" src="https://media.tenor.com/-legwEzkXG0AAAAM/angry-cat.gif" style="
+        position: fixed;
+        inset: 0;
+        width: 100vw;
+        height: 100vh;
+        object-fit: cover;
+        z-index: 999;
+        display: none;
+    ">
 
     <script>
+        let noClickCount = 0;
+        const titleText = document.getElementById('titleText');
+        const msgText = document.getElementById('msgText');
+        const gifOverlay = document.getElementById('gifOverlay');
+
         const body = document.body;
         const yesBtn = document.getElementById('yesBtn');
         const noBtn = document.getElementById('noBtn');
@@ -201,6 +216,27 @@
             setTimeout(() => {
                 document.querySelectorAll('.rain-drop').forEach(el => el.remove());
             }, 1000);
+        });
+
+        noBtn.addEventListener('click', () => {
+            noClickCount++;
+
+            if (noClickCount === 1) {
+                titleText.textContent = "Lessshhh 7oby !!";
+                msgText.innerHTML = "Don't click No again XD";
+
+            } else if (noClickCount === 2) {
+                titleText.textContent = "Astagfirullah";
+                msgText.innerHTML = "This is your last chance Habibti 😒";
+
+            } else {
+                // 3rd click and beyond → show GIF
+                gifOverlay.style.display = "block";
+
+                setTimeout(() => {
+                    gifOverlay.style.display = "none";
+                }, 3000);
+            }
         });
 
         function createRain() {
