--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
     <div class="static-heart" style="bottom: 20%; right: 10%; transform: rotate(-10deg);">❤</div>
 
     <div class="card">
-        <h1 id="titleText">Hello Beautiful !!</h1>
-        <p id="msgText" style="color: #e16da7">You make my heart smile every single day. <br><b>Will you be my <span class="shine">Valentine</span> ?</b></p>
+        <h1 id="titleText">Hello My Love!</h1>
+        <p id="msgText" style="color: #e16da7">You make my heart smile every single day. <br><b>Will you be my <span class="shine" style="margin-top: 10px;">Valentine</span> ?</b></p>
         
         <div class="btn-container">
             <button id="yesBtn">Yes! 💖</button>
